--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "main": "dist/easy-parallax.js",
   "license": "MIT",
+  "scripts": {
+    "dist": "gulp dist"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
