--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "extends": "airbnb",
     "parserOptions": {
-        "ecmaVersion": 6,
+        "ecmaVersion": 2017,
         "sourceType": "module",
         "ecmaFeatures": { "jsx": true, "forOf": true }
     },
@@ -13,22 +13,24 @@
         "object-property-newline": "off",
         "class-methods-use-this": "off",
         "prefer-arrow-callback": "off",
+        "prefer-destructuring": "off",
         "arrow-parens": ["error", "always"],
         "arrow-body-style": "off",
         "no-alert": "off",
         "func-names": "off",
         "no-mixed-operators": "off",
         "no-param-reassign": ["error", { "props": false }],
-        "no-underscore-dangle": ["error", { "allowAfterThis": true, "allowAfterSuper": true }],
+        "no-underscore-dangle": "off",
         "quotes": ["error", "single", {"avoidEscape": true, "allowTemplateLiterals": true}],
         "quote-props": ["error", "consistent"],
         "eol-last": "error",
         "indent": ["error", 2, { "MemberExpression": 0 }],
         "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
         "no-trailing-spaces": "error",
-        "brace-style": ["error", "1tbs", {"allowSingleLine": false}],
+        "brace-style": ["error", "1tbs", {"allowSingleLine": true}],
         "curly": "error",
         "object-curly-spacing": ["error", "always"],
+        "object-curly-newline": "off",
         "block-spacing": "error",
         "space-before-blocks": ["error", {"functions": "always", "keywords": "always", "classes": "always"}],
         "array-bracket-spacing": ["error", "never"],
